--- a/notebook/partie1_markowitz.ipynb
+++ b/notebook/partie1_markowitz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "e08fe4b3",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d3745416",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
     "JOURS_DE_BOURSE = 252\n",
     "\n",
     "try:\n",
-    "    df_rendements = pd.read_csv(\"data/returns_final.csv\", index_col=\"Date\", parse_dates=True)\n",
+    "    df_rendements = pd.read_csv(\"../data/returns_final.csv\", index_col=\"Date\", parse_dates=True)\n",
     "except FileNotFoundError:\n",
     "    df_rendements = pd.read_csv(\"returns_final.csv\", index_col=\"Date\", parse_dates=True)\n",
     "\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "201186e6",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "0315443c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "256bf637",
    "metadata": {},
    "outputs": [
