Clean du code et du github

--- a/notebook/data_cleaning.ipynb
+++ b/notebook/data_cleaning.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7a8a4ac8",
+   "metadata": {},
+   "source": [
+    "## On fait les imports et on definie des parametres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe9c015",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "DATA_DIR = \"data\"           \n",
+    "TRADING_DAYS = 252         \n",
+    "MAX_MISSING_PCT = 0.1       "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dcb8476",
+   "metadata": {},
+   "source": [
+    "## Fonction de fusion\n",
+    "On commence par charger les csv et on les fusionnes dans un seul gros dataframe en aligant sur les dates. Ensuite on nettoie les donnees en supprimants les actifs qui ont trop de valeurs manquantes. La 3eme etape est le calcul de rendements avec la formule : R_t = (P_t / P_{t-1}) - 1. Et pour finir on calcul les inputs de Markowitz (Annualisation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d0fd8c5f",
@@ -30,15 +64,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# === Paramètres ===\n",
-    "DATA_DIR = \"data\"           # Dossier contenant vos CSV sectoriels\n",
-    "TRADING_DAYS = 252          # Standard pour annualiser (252 jours de bourse/an)\n",
-    "MAX_MISSING_PCT = 0.1       # Seuil : on rejette une action si > 10% de données manquent\n",
-    "\n",
     "def get_market_data():\n",
     "    \"\"\"\n",
     "    Charge les CSV, nettoie les données, calcule les rendements\n",
@@ -52,7 +77,6 @@
     "    if not os.path.exists(DATA_DIR):\n",
     "        raise FileNotFoundError(f\"Le dossier '{DATA_DIR}' n'existe pas. Lancez download.py d'abord.\")\n",
     "\n",
-    "    # 1. Chargement et fusion des fichiers CSV\n",
     "    sector_files = [f for f in os.listdir(DATA_DIR) if f.endswith(\".csv\")]\n",
     "    \n",
     "    if not sector_files:\n",
@@ -63,42 +87,31 @@
     "    df_list = []\n",
     "    for file in sector_files:\n",
     "        path = os.path.join(DATA_DIR, file)\n",
-    "        # On charge en indexant par la Date\n",
     "        df_sector = pd.read_csv(path, index_col=\"Date\", parse_dates=True)\n",
     "        df_list.append(df_sector)\n",
     "    \n",
-    "    # Fusion en un seul gros DataFrame (alignement sur les dates)\n",
     "    prices = pd.concat(df_list, axis=1)\n",
     "    print(f\"Dimensions brutes : {prices.shape[1]} actifs sur {prices.shape[0]} jours.\")\n",
     "\n",
-    "    # 2. Nettoyage des données (Crucial pour éviter les erreurs de matrice)\n",
-    "    \n",
-    "    # a. Supprimer les actifs qui ont trop de NaNs (ex: entrés en bourse récemment)\n",
     "    missing_ratios = prices.isna().mean()\n",
     "    to_drop = missing_ratios[missing_ratios > MAX_MISSING_PCT].index\n",
     "    prices = prices.drop(columns=to_drop)\n",
     "    if len(to_drop) > 0:\n",
     "        print(f\"Actifs supprimés (trop de données manquantes) : {len(to_drop)}\")\n",
     "\n",
-    "    # b. Remplir les petits trous (Forward Fill) puis supprimer les lignes restantes vides\n",
     "    prices = prices.ffill().dropna()\n",
     "\n",
-    "    # 3. Calcul des Rendements (Returns)\n",
-    "    # Formule : R_t = (P_t / P_{t-1}) - 1\n",
     "    returns = prices.pct_change().dropna()\n",
     "\n",
     "    print(f\"Univers final : {returns.shape[1]} actifs valides sur {returns.shape[0]} jours.\")\n",
     "\n",
-    "    # 4. Calcul des inputs de Markowitz (Annualisation)\n",
-    "    # mu = Moyenne journalière * 252\n",
     "    mu = returns.mean() * TRADING_DAYS\n",
     "    \n",
-    "    # Sigma = Covariance journalière * 252\n",
     "    Sigma = returns.cov() * TRADING_DAYS\n",
     "\n",
     "    return mu, Sigma, returns\n",
     "\n",
-    "# === Bloc de test ===\n",
+    "# Bloc de test\n",
     "if __name__ == \"__main__\":\n",
     "    try:\n",
     "        mu, Sigma, returns = get_market_data()\n",
@@ -108,7 +121,6 @@
     "        print(mu.head())\n",
     "        print(\"\\nMatrice de Covariance (taille) :\", Sigma.shape)\n",
     "        \n",
-    "        # Petit check mathématique : La matrice doit être symétrique\n",
     "        is_symmetric = np.allclose(Sigma, Sigma.T)\n",
     "        print(f\"Matrice symétrique ? {is_symmetric}\")\n",
     "        \n",
@@ -117,8 +129,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "409f7997",
+   "metadata": {},
+   "source": [
+    "## Sauvegarde dans un fichier csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3cf38e1c",
    "metadata": {},
    "outputs": [
@@ -145,32 +165,25 @@
     }
    ],
    "source": [
-    "# === Configuration ===\n",
     "FINAL_DATA_PATH = \"data/returns_final.csv\"\n",
     "TRADING_DAYS = 252\n",
     "\n",
-    "# === Logique de chargement intelligent ===\n",
     "if os.path.exists(FINAL_DATA_PATH):\n",
-    "    print(\"✅ Fichier de données nettoyées trouvé. Chargement rapide...\")\n",
-    "    # On charge le CSV déjà prêt\n",
+    "    print(\"Fichier de données nettoyées trouvé. Chargement rapide...\")\n",
     "    returns = pd.read_csv(FINAL_DATA_PATH, index_col=\"Date\", parse_dates=True)\n",
     "    \n",
-    "    # On recalcule juste mu et Sigma (c'est instantané)\n",
     "    mu = returns.mean() * TRADING_DAYS\n",
     "    Sigma = returns.cov() * TRADING_DAYS\n",
     "    \n",
     "    print(f\"Données chargées : {returns.shape[1]} actifs sur {returns.shape[0]} dates.\")\n",
     "\n",
     "else:\n",
-    "    print(\"⚠️ Fichier non trouvé. Lancement du traitement complet (peut être long)...\")\n",
-    "    # On lance la fonction lourde définie précédemment\n",
+    "    print(\"Fichier non trouvé. Lancement du traitement complet (peut être long)...\")\n",
     "    mu, Sigma, returns = get_market_data()\n",
     "    \n",
-    "    # === SAUVEGARDE ICI ===\n",
-    "    print(f\"💾 Sauvegarde des données dans {FINAL_DATA_PATH}...\")\n",
+    "    print(f\"Sauvegarde des données dans {FINAL_DATA_PATH}...\")\n",
     "    returns.to_csv(FINAL_DATA_PATH)\n",
     "\n",
-    "# === Vérification rapide ===\n",
     "print(\"\\n--- Prêt pour l'optimisation ---\")\n",
     "print(\"Exemple de mu (Rendement annuel attendu) :\")\n",
     "print(mu.head())"
