--- a/notebook/partie2_nsga2.ipynb
+++ b/notebook/partie2_nsga2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -32,7 +32,6 @@
     "import sys\n",
     "current_dir = os.getcwd()\n",
     "sys.path.append(os.path.abspath(os.path.join(current_dir, '..', 'py')))\n",
-    "# Import des fonctions NSGA-II\n",
     "import nsga2_optimizer as nsga2"
    ]
   },
@@ -91,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "24faaafd63a2e4b4",
    "metadata": {},
    "outputs": [
@@ -113,9 +112,9 @@
     "indices_initiaux = np.random.choice(nombre_actifs, 5, replace=False)\n",
     "w_current[indices_initiaux] = 0.2\n",
     "\n",
-    "# Paramètres d'optimisation\n",
-    "K_CARDINALITE = 10  # Nombre d'actifs souhaités dans le portefeuille\n",
-    "COUT_TRANSACTION = 0.005  # 0.5% de coût proportionnel\n",
+    "\n",
+    "K_CARDINALITE = 10  \n",
+    "COUT_TRANSACTION = 0.005 \n",
     "POPULATION_SIZE = 100\n",
     "NB_GENERATIONS = 200\n",
     "\n",
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "618199cb53e0bdad",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1394,6 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# %% Graphique 3D Plotly (interactif)\n",
     "fig_plotly = go.Figure(data=[go.Scatter3d(\n",
     "    x=returns * 100,\n",
     "    y=risks * 100,\n",
@@ -1438,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1998b639d32480a7",
    "metadata": {},
    "outputs": [
@@ -1473,12 +1471,11 @@
     }
    ],
    "source": [
-    "R_MIN = 0.15  # 15% de rendement annuel minimal\n",
+    "R_MIN = 0.15 \n",
     "\n",
     "print(f\"\\n=== Sélection du Portefeuille Optimal ===\")\n",
     "print(f\"Contrainte: Rendement >= {R_MIN:.2%}\")\n",
     "\n",
-    "# Filtrage et sélection\n",
     "filtered_X, filtered_F, indices = nsga2.filter_pareto_by_min_return(res, R_MIN)\n",
     "\n",
     "if filtered_X is not None:\n",
@@ -1486,24 +1483,22 @@
     "        filtered_X, filtered_F\n",
     "    )\n",
     "\n",
-    "    print(f\"\\n✅ Portefeuille sélectionné:\")\n",
+    "    print(f\"\\nPortefeuille sélectionné:\")\n",
     "    print(f\"  Rendement: {best_return:.2%}\")\n",
     "    print(f\"  Risque: {best_risk:.2%}\")\n",
     "    print(f\"  Coûts: {best_cost:.2%}\")\n",
     "    print(f\"  Ratio de Sharpe: {best_return/best_risk:.2f}\")\n",
     "\n",
-    "    # Top actifs\n",
-    "    print(f\"\\n📊 Top 10 des Actifs:\")\n",
+    "    print(f\"\\nTop 10 des Actifs:\")\n",
     "    top_assets = nsga2.get_top_assets(best_weights, asset_names, top_n=10)\n",
     "    for idx, row in top_assets.iterrows():\n",
     "        print(f\"  {row['Asset']}: {row['Weight']:.2%}\")\n",
     "\n",
-    "    # Nombre d'actifs actifs\n",
     "    n_actifs_actifs = np.sum(best_weights > 1e-4)\n",
-    "    print(f\"\\n📈 Nombre d'actifs dans le portefeuille: {n_actifs_actifs}\")\n",
+    "    print(f\"\\nNombre d'actifs dans le portefeuille: {n_actifs_actifs}\")\n",
     "\n",
     "else:\n",
-    "    print(\"\\n❌ Aucun portefeuille ne satisfait cette contrainte de rendement!\")\n",
+    "    print(\"\\nAucun portefeuille ne satisfait cette contrainte de rendement!\")\n",
     "    print(f\"   Rendement maximal disponible: {stats['return_max']:.2%}\")"
    ]
   },
@@ -1517,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "eecac5d7811cd962",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1530,6 @@
    "source": [
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
     "\n",
-    "# Projection Rendement-Risque\n",
     "axes[0].scatter(risks * 100, returns * 100, alpha=0.6, s=30, c='blue', edgecolors='black')\n",
     "if filtered_X is not None:\n",
     "    axes[0].scatter(best_risk * 100, best_return * 100,\n",
@@ -1547,7 +1541,6 @@
     "axes[0].grid(True, alpha=0.3)\n",
     "axes[0].legend()\n",
     "\n",
-    "# Projection Rendement-Coûts\n",
     "axes[1].scatter(costs * 100, returns * 100, alpha=0.6, s=30, c='green', edgecolors='black')\n",
     "if filtered_X is not None:\n",
     "    axes[1].scatter(best_cost * 100, best_return * 100,\n",
@@ -1559,7 +1552,6 @@
     "axes[1].grid(True, alpha=0.3)\n",
     "axes[1].legend()\n",
     "\n",
-    "# Projection Risque-Coûts\n",
     "axes[2].scatter(risks * 100, costs * 100, alpha=0.6, s=30, c='orange', edgecolors='black')\n",
     "if filtered_X is not None:\n",
     "    axes[2].scatter(best_risk * 100, best_cost * 100,\n",
@@ -1585,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e58a464dcde52f3a",
    "metadata": {},
    "outputs": [
@@ -1612,9 +1604,8 @@
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "df_pareto.to_csv(f\"{output_dir}/pareto_front_nsga2.csv\", index=False)\n",
-    "print(f\"\\n💾 Front de Pareto sauvegardé dans '{output_dir}/pareto_front_nsga2.csv'\")\n",
+    "print(f\"\\nFront de Pareto sauvegardé dans '{output_dir}/pareto_front_nsga2.csv'\")\n",
     "\n",
-    "# Sauvegarder le portefeuille optimal\n",
     "if filtered_X is not None:\n",
     "    df_optimal = pd.DataFrame({\n",
     "        'Asset': asset_names,\n",
@@ -1622,9 +1613,9 @@
     "    })\n",
     "    df_optimal = df_optimal[df_optimal['Weight'] > 1e-4].sort_values('Weight', ascending=False)\n",
     "    df_optimal.to_csv(f\"{output_dir}/optimal_portfolio_nsga2.csv\", index=False)\n",
-    "    print(f\"💾 Portefeuille optimal sauvegardé dans '{output_dir}/optimal_portfolio_nsga2.csv'\")\n",
+    "    print(f\"Portefeuille optimal sauvegardé dans '{output_dir}/optimal_portfolio_nsga2.csv'\")\n",
     "\n",
-    "print(\"\\n✅ Analyse complète terminée!\")"
+    "print(\"\\nAnalyse complète terminée!\")"
    ]
   }
  ],
