--- a/notebook/partie1_markowitz.ipynb
+++ b/notebook/partie1_markowitz.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97255f23",
+   "metadata": {},
+   "source": [
+    "## CHARGEMENT DES DONNÉES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d3745416",
@@ -27,9 +35,6 @@
     }
    ],
    "source": [
-    "# ==============================================================================\n",
-    "# 1. CHARGEMENT DES DONNÉES\n",
-    "# ==============================================================================\n",
     "JOURS_DE_BOURSE = 252\n",
     "\n",
     "try:\n",
@@ -44,23 +49,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1cd76af",
+   "metadata": {},
+   "source": [
+    "## Definition des fonctions mathematiques"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "201186e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
-    "# 2. FONCTIONS MATHÉMATIQUES (Le Cœur du Sujet)\n",
-    "# ==============================================================================\n",
-    "\n",
     "def calculer_objectif(poids, mu, Sigma, alpha):\n",
     "    \"\"\"Fonction à minimiser (Rendement vs Risque)\"\"\"\n",
     "    rendement = np.dot(poids, mu)\n",
-    "    # Variance = w^T * Sigma * w\n",
     "    variance = np.dot(poids.T, np.dot(Sigma, poids)) \n",
     "    \n",
-    "    # On minimise : alpha * (-Rendement) + (1-alpha) * Variance\n",
     "    return alpha * (-rendement) + (1 - alpha) * variance\n",
     "\n",
     "def calculer_gradient(poids, mu, Sigma, alpha):\n",
@@ -81,58 +88,56 @@
     "    C'est la méthode géométriquement correcte pour la descente de gradient.\n",
     "    \"\"\"\n",
     "    n = len(v)\n",
-    "    # 1. On trie v en ordre décroissant\n",
     "    u = np.sort(v)[::-1]\n",
     "    \n",
-    "    # 2. On cherche le nombre d'éléments à garder strictement positifs (rho)\n",
     "    cssv = np.cumsum(u)\n",
     "    indices = np.arange(n) + 1\n",
     "    cond = u - (cssv - 1) / indices > 0\n",
     "    rho = indices[cond][-1]\n",
     "    \n",
-    "    # 3. On calcule le seuil (theta)\n",
     "    theta = (cssv[rho - 1] - 1) / rho\n",
     "    \n",
-    "    # 4. On projette\n",
     "    w = np.maximum(v - theta, 0)\n",
     "    return w"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f2f752e",
+   "metadata": {},
+   "source": [
+    "## ALGORITHME DE DESCENTE DE GRADIENT "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "0315443c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
-    "# 3. ALGORITHME DE DESCENTE DE GRADIENT (Fait main)\n",
-    "# ==============================================================================\n",
-    "\n",
     "def optimiser_par_gradient(mu, Sigma, alpha, n_iterations=500, learning_rate=0.01):\n",
-    "    # 1. Point de départ : portefeuille équilibré (1/N)\n",
     "    poids = np.array([1/nombre_actifs] * nombre_actifs)\n",
     "    \n",
-    "    # 2. Boucle d'apprentissage\n",
     "    for i in range(n_iterations):\n",
-    "        # A. On calcule la direction (la pente)\n",
     "        grad = calculer_gradient(poids, mu, Sigma, alpha)\n",
-    "        \n",
-    "        # B. On fait un pas dans la direction opposée (Descente)\n",
     "        poids = poids - learning_rate * grad\n",
-    "        \n",
-    "        # C. Projection : On corrige les poids pour qu'ils restent réalistes (Somme=1, Positifs)\n",
     "        poids = projection_simplex(poids)\n",
-    "        \n",
-    "        # (Optionnel) Réduire le learning rate petit à petit pour affiner la fin\n",
-    "        # learning_rate *= 0.995 \n",
     "        \n",
     "    return poids"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "540f61b4",
+   "metadata": {},
+   "source": [
+    "## EXÉCUTION ET VISUALISATION + OPTIMISATION WARM START"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "256bf637",
    "metadata": {},
    "outputs": [
@@ -156,56 +161,41 @@
     }
    ],
    "source": [
-    "# ==============================================================================\n",
-    "# 4. EXÉCUTION ET VISUALISATION\n",
-    "# ==============================================================================\n",
     "print(\"Calcul en cours (cela peut prendre quelques secondes)...\")\n",
     "\n",
     "alphas = np.linspace(0, 1, 50)\n",
     "resultats_risque = []\n",
     "resultats_rendement = []\n",
     "\n",
-    "# ==============================================================================\n",
-    "# VERSION AMÉLIORÉE : WARM START (Démarrage à chaud)\n",
-    "# ==============================================================================\n",
     "\n",
-    "# On augmente les itérations et on réduit le pas pour la précision\n",
+    "\n",
     "NB_ITERATIONS = 500 \n",
     "TAUX_APPRENTISSAGE = 0.05 \n",
     "\n",
-    "alphas = np.linspace(0, 1, 100) # Plus de points pour une courbe lisse\n",
+    "alphas = np.linspace(0, 1, 100) \n",
     "resultats_risque = []\n",
     "resultats_rendement = []\n",
     "\n",
-    "# ASTUCE : On garde les derniers poids en mémoire\n",
-    "# Point de départ initial : 1/N\n",
     "poids_courants = np.array([1/nombre_actifs] * nombre_actifs)\n",
     "\n",
     "print(\"Optimisation avec Warm Start en cours...\")\n",
     "\n",
     "for alpha in alphas:\n",
-    "    # On utilise 'poids_courants' comme point de départ (x0) au lieu de réinitialiser\n",
-    "    # Cela permet de \"suivre\" la courbe de proche en proche\n",
-    "    \n",
-    "    # --- Petite boucle d'optimisation locale ---\n",
+    "\n",
     "    for i in range(NB_ITERATIONS):\n",
     "        grad = calculer_gradient(poids_courants, mu, Sigma, alpha)\n",
     "        poids_courants = poids_courants - TAUX_APPRENTISSAGE * grad\n",
     "        poids_courants = projection_simplex(poids_courants)\n",
-    "    # -------------------------------------------\n",
     "    \n",
-    "    # On sauvegarde le résultat\n",
     "    ret = np.dot(poids_courants, mu)\n",
     "    risk = np.sqrt(np.dot(poids_courants.T, np.dot(Sigma, poids_courants)))\n",
     "    \n",
     "    resultats_rendement.append(ret)\n",
     "    resultats_risque.append(risk)\n",
     "\n",
-    "# Tracé\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.plot(resultats_risque, resultats_rendement, 'r-', linewidth=2, label='Frontière (Gradient + Warm Start)')\n",
     "\n",
-    "# Comparaison avec les actifs seuls\n",
     "volatilite_actifs = np.sqrt(np.diag(Sigma))\n",
     "plt.scatter(volatilite_actifs, mu, color='gray', s=10, alpha=0.3)\n",
     "\n",
