modification choix portfeuille optimale ngsa2

--- a/notebook/partie2_nsga2.ipynb
+++ b/notebook/partie2_nsga2.ipynb
@@ -1476,30 +1476,27 @@
     "print(f\"\\n=== Sélection du Portefeuille Optimal ===\")\n",
     "print(f\"Contrainte: Rendement >= {R_MIN:.2%}\")\n",
     "\n",
-    "filtered_X, filtered_F, indices = nsga2.filter_pareto_by_min_return(res, R_MIN)\n",
+    "X_s1, F_s1 = nsga2.filter_step1_return(res, R_MIN)\n",
     "\n",
-    "if filtered_X is not None:\n",
-    "    best_weights, best_return, best_risk, best_cost = nsga2.select_min_risk_portfolio(\n",
-    "        filtered_X, filtered_F\n",
-    "    )\n",
+    "if X_s1 is not None:\n",
+    "    # 2. Filtrage par Risque (Keep 'Safe' candidates within 5% tolerance)\n",
+    "    # Cela permet à l'étape suivante d'avoir le choix entre plusieurs portefeuilles peu risqués\n",
+    "    X_s2, F_s2 = nsga2.filter_step2_risk(X_s1, F_s1, tolerance=0.05)\n",
     "\n",
-    "    print(f\"\\nPortefeuille sélectionné:\")\n",
-    "    print(f\"  Rendement: {best_return:.2%}\")\n",
-    "    print(f\"  Risque: {best_risk:.2%}\")\n",
-    "    print(f\"  Coûts: {best_cost:.2%}\")\n",
-    "    print(f\"  Ratio de Sharpe: {best_return/best_risk:.2f}\")\n",
+    "    if X_s2 is not None:\n",
+    "        # 3. Sélection par Coût (Pick Cheapest)\n",
+    "        best_weights, best_return, best_risk, best_cost = nsga2.select_step3_cost(\n",
+    "            X_s2, F_s2\n",
+    "        )\n",
     "\n",
-    "    print(f\"\\nTop 10 des Actifs:\")\n",
-    "    top_assets = nsga2.get_top_assets(best_weights, asset_names, top_n=10)\n",
-    "    for idx, row in top_assets.iterrows():\n",
-    "        print(f\"  {row['Asset']}: {row['Weight']:.2%}\")\n",
-    "\n",
-    "    n_actifs_actifs = np.sum(best_weights > 1e-4)\n",
-    "    print(f\"\\nNombre d'actifs dans le portefeuille: {n_actifs_actifs}\")\n",
-    "\n",
+    "        print(\"=== RÉSULTAT OPTIMAL (Entonnoir Rendement -> Risque -> Coût) ===\")\n",
+    "        print(f\"Rendement : {best_return:.2%}\")\n",
+    "        print(f\"Risque    : {best_risk:.2%}\")\n",
+    "        print(f\"Coût      : {best_cost:.2%}\")\n",
+    "    else:\n",
+    "        print(\"Erreur : Le filtre de risque a éliminé toutes les solutions.\")\n",
     "else:\n",
-    "    print(\"\\nAucun portefeuille ne satisfait cette contrainte de rendement!\")\n",
-    "    print(f\"   Rendement maximal disponible: {stats['return_max']:.2%}\")"
+    "    print(\"Erreur : Rendement inatteignable.\")"
    ]
   },
   {
@@ -1531,7 +1528,7 @@
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
     "\n",
     "axes[0].scatter(risks * 100, returns * 100, alpha=0.6, s=30, c='blue', edgecolors='black')\n",
-    "if filtered_X is not None:\n",
+    "if X_s1 is not None:\n",
     "    axes[0].scatter(best_risk * 100, best_return * 100,\n",
     "                   color='red', s=200, marker='*',\n",
     "                   edgecolors='black', linewidth=2, label='Sélectionné')\n",
@@ -1542,7 +1539,7 @@
     "axes[0].legend()\n",
     "\n",
     "axes[1].scatter(costs * 100, returns * 100, alpha=0.6, s=30, c='green', edgecolors='black')\n",
-    "if filtered_X is not None:\n",
+    "if X_s1 is not None:\n",
     "    axes[1].scatter(best_cost * 100, best_return * 100,\n",
     "                   color='red', s=200, marker='*',\n",
     "                   edgecolors='black', linewidth=2, label='Sélectionné')\n",
@@ -1553,7 +1550,7 @@
     "axes[1].legend()\n",
     "\n",
     "axes[2].scatter(risks * 100, costs * 100, alpha=0.6, s=30, c='orange', edgecolors='black')\n",
-    "if filtered_X is not None:\n",
+    "if X_s1 is not None:\n",
     "    axes[2].scatter(best_risk * 100, best_cost * 100,\n",
     "                   color='red', s=200, marker='*',\n",
     "                   edgecolors='black', linewidth=2, label='Sélectionné')\n",
@@ -1606,7 +1603,7 @@
     "df_pareto.to_csv(f\"{output_dir}/pareto_front_nsga2.csv\", index=False)\n",
     "print(f\"\\nFront de Pareto sauvegardé dans '{output_dir}/pareto_front_nsga2.csv'\")\n",
     "\n",
-    "if filtered_X is not None:\n",
+    "if X_s1 is not None:\n",
     "    df_optimal = pd.DataFrame({\n",
     "        'Asset': asset_names,\n",
     "        'Weight': best_weights\n",
